--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,36 @@
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.username=postgres
+spring.datasource.password=admin123
+
+# Server Port
+server.port=8082
+
+# Hibernate Configuration
+spring.jpa.properties.hibernate.default_schema=loan_service
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.tool.hbm2ddl=DEBUG
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
+# HikariCP Configuration (Connection Pooling)
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=600000
+
+# Liquibase Configuration
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master-loan.yaml
+spring.liquibase.enabled=true
+spring.liquibase.default-schema=loan_service
+
+# Debug Logging (optional, for troubleshooting)
+logging.level.org.springframework=DEBUG
+logging.level.root=INFO
+logging.level.com.example.financemanagement=DEBUG
+
 spring.application.name=loan-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
